adjust loader and correct z-index

--- a/public/style.css
+++ b/public/style.css
@@ -380,8 +380,9 @@ ul {
   }
 }
 .fa-utensils {
-  grid-row: 4/4;
-  z-index: 3;
+  grid-row: 3/3;
+  grid-column: 2/2;
+  z-index: 2;
   animation-name: fadeOut;
   animation-duration: 5s;
   color: #FF79DA;
@@ -389,7 +390,8 @@ ul {
 }
 
 .lds-ellipsis {
-  grid-row: 3/3;
+  grid-row: 4/4;
+  grid-column: 2/2;
   display: inline-block;
   position: relative;
   z-index: 2;
@@ -453,6 +455,7 @@ ul {
 }
 .loader {
   grid-row: 2/2;
+  grid-column: 2/2;
   z-index: 2;
   font-size: 48px;
   display: inline-block;
@@ -506,14 +509,15 @@ body {
   gap: 0;
   margin: 0;
   padding: 0;
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: 35% 10% 10% 10% 35%;
+  grid-template-columns: 10% 80% 10%;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #99E2D0;
-  z-index: 1;
+  z-index: 2;
   animation-name: fadeInOut;
   animation-duration: 5s;
   animation-fill-mode: forwards;
@@ -527,6 +531,7 @@ body {
   }
   50% {
     opacity: 1;
+    z-index: 3;
   }
   100% {
     opacity: 0;
@@ -534,7 +539,7 @@ body {
   }
 }
 .heart1::before {
-  position: absolute;
+  position: fixed;
   z-index: 1;
 }
 
