--- a/src/sass/pages/laPaletteDuGout.scss
+++ b/src/sass/pages/laPaletteDuGout.scss
@@ -298,9 +298,10 @@
     }
   }
   .fa-utensils{
-    grid-row: 4/4;
+    grid-row: 3/3;
+    grid-column: 2/2;
 
-    z-index: 3;
+    z-index: 2;
     animation-name:fadeOut;
     animation-duration: 5s;
     color: #FF79DA ;
@@ -310,7 +311,9 @@
 
 
   .lds-ellipsis {
-    grid-row: 3/3;
+    grid-row: 4/4;
+    grid-column: 2/2;
+
     display: inline-block;
     position: relative;
     z-index: 2;
@@ -375,6 +378,7 @@
 
   .loader {
     grid-row: 2/2;
+    grid-column: 2/2;
 
     z-index: 2;
     font-size: 48px;
@@ -439,14 +443,16 @@ body {
       margin: 0;
       padding: 0;
     //   grid-template-columns:10% 80% 10% ;
-      grid-template-rows: repeat(5, 1fr);
+      grid-template-rows: 35% 10% 10% 10% 35%;
+    grid-template-columns: 10% 80% 10%;
+
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #99E2D0;
-    z-index: 1;
+    z-index: 2;
     animation-name: fadeInOut;
     animation-duration: 5s;
     animation-fill-mode: forwards;
@@ -460,6 +466,7 @@ body {
     }
     50% {
       opacity: 1;
+      z-index: 3;
     }
 
     100% {
@@ -476,7 +483,7 @@ body {
 // }
 
 .heart1::before {
-    position: absolute;
+    position: fixed;
     z-index: 1;
 }
 
